2008-04-28  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/sfr_defs.h: Define __SFR_OFFSET value depending on 
	whether an XMEGA device is being used. Use __SFR_OFFSET in _SFR_IO8,
	_SFR_IO16, _SFR_IO_ADDR, _SFR_IO_REG_P macros.

2008-04-28  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23004.
	* include/avr/wdt.h: Fix Doxygen comment.
	* NEWS: Add to fixed bug list.

2008-04-28  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iotn48.h: Fix and protect ADC definition, add ADCW 
	definition.
	* include/avr/iom1284p.h: Add ADCW definition. Protect ADC definition.
	* include/avr/iom328p.h: Ditto.
	* include/avr/iom168p.h: Ditto.
	* include/avr/iom48p.h: Ditto.
	* include/avr/iom32m1.h: Ditto.
	* include/avr/iom32c1.h: Ditto.
	* include/avr/io90pwm3b.h: Ditto.
	* include/avr/io90pwm2b.h: Ditto.
	* include/avr/iotn167.h: Ditto.

2008-04-28  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom32u4.h: Remove bit definitions for UBRR1L and UBRR1H,
	per Sylvain Guyon, Atmel.

2008-04-26  Anatoly Sokolov <aesok@post.ru>

	* AvrCommon.am: Remove.
	* AvrCommonLibC.am: Remove.	

2008-04-24  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23032.
	* include/avr/iomxx4.h: Add missing PORTxn bit definitions.
	* NEWS: Add to bug list.

2008-04-24  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/io90pwm2b.h (FUSE_CKLDIV8): Rename to FUSE_CKDIV8.
	* include/avr/io90pwm3b.h: Ditto.
	* include/avr/iotn167.h (BIN): Fix the value of BIN to 7 for the ADCSRB
	register.
	* include/avr/iom88p.h: Add ADCW definition and guard ADC for assembler.

2008-04-10  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/math.h: Change functions from 'extern inline' to 'static inline'.
	This works around a linker problem with including this header and using
	-std=[gnu99,c99] (it would give 'multiple definition' errors).

2008-04-09  Dmitry Xmelkov  <dmix@gmail.ru>
